--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -17,5 +17,12 @@ clean-targets:
 
 models:
   football_statsbomb:
-    marts:
+    staging:
+      +materialized: view
+      +schema: staging
+    intermediate:
+      +materialized: view
+      +schema: intermediate
+    marts: 
       +materialized: table
+      +schema: marts
