--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,9 +88,22 @@ services:
     networks:
       - dagnet
 
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    ports:
+      - "3001:3000"
+    environment:
+      MB_DB_FILE: /metabase-data/metabase.db
+    volumes:
+      - metabase_data:/metabase-data
+    networks:
+      - dagnet
+
 volumes:
   minio_data:
   clickhouse_data:
+  metabase_data:
 
 networks:
   dagnet:
